# helixdiff

./: .gitignore  BREAKTHROUGH_RESEARCH_3H.md  LICENSE  MODEL_CARD.md  README.md  REPAIR_BENCH_30K.md  RESEARCH_NOTES.md  pyproject.toml
checkpoints/: helixdiff_tiny.pt  helixdiff_tiny_shakespeare_clock_suture_30k_slim.pt
configs/: base.json  large.json  mac_sota.json  proof_echo_dominance_selector_contract_smoke.yaml  proof_in_document_echo_oracle_smoke.yaml  proof_proxy_mask_selector_contract_smoke.yaml  proof_proxy_mask_target_shadow_smoke.yaml  proof_visible_reranker_oracle_smoke.yaml  tiny.json  tiny_continue.json  tiny_suture_curriculum.json
data/: seed_corpus.txt
helixdiff/: __init__.py  adapt.py  bench.py  breakthrough.py  calibrate.py  contract.py  data.py  diffusion.py  eval.py  export.py  gate.py  infill.py  model.py  ngram.py  recipe.py  sample.py  tokenizer.py  train.py  verify_scratch.py
proof/: bench_clock_suture_30k.json  bench_clock_suture_30k_unseen_candidates.json  bench_clock_suture_30k_unseen_candidates_8case.json  bench_clock_suture_30k_unseen_candidates_8case_g05.json  bench_prior_topk_dual_smoke.json  bench_shakespeare_4k_unseen_candidates.json  bench_suture_tta_4case_lastblock10.json  bench_suture_tta_smoke.json  canvas_boundary_smoke.json  echo_dominance_selector_contract_smoke.json  echo_dominance_selector_contract_smoke_contract.json  eval_clock_suture_30k.json  eval_clock_suture_30k_slim_smoke.json  eval_tiny_final.json  export_clock_suture_30k.json  gate_clock_suture_30k.json  gate_clock_suture_30k_8case.json  gate_prior_topk_dual_smoke.json  in_document_echo_oracle_smoke.json  infill_demo.json  infill_suture_tta_smoke.json  lattice_oracle_4case.json  lattice_oracle_4case_local_calibration.json  lattice_oracle_4case_surface_anchor_calibration.json  proxy_mask_selector_contract_smoke.json  proxy_mask_selector_contract_smoke_contract.json  sample_tiny_candidate_42.json  scratch_verifier_clock_suture_30k.json  scratch_verifier_tiny.json  selector_contract_smoke.json  selector_margin_calibration_smoke.json  visible_reranker_oracle_smoke.json
samples/: latest.txt  shakespeare_clock_suture_30k_ema.txt
tests/: test_adapt.py  test_bench.py  test_breakthrough.py  test_calibrate.py  test_canvas_boundary_smoke.py  test_contract.py  test_diffusion.py  test_echo_dominance_selector_contract.py  (+11 more)
(+9 files in other folders)
