[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helixdiff"
version = "0.1.0"
description = "A from-scratch byte-level diffusion language model with ribbon diffusion sampling."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Nicholas Dunzelman" }]
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.scripts]
helixdiff-train = "helixdiff.train:main"
helixdiff-sample = "helixdiff.sample:main"
helixdiff-eval = "helixdiff.eval:main"
helixdiff-infill = "helixdiff.infill:main"
helixdiff-bench = "helixdiff.bench:main"
helixdiff-calibrate-selector = "helixdiff.calibrate:main"
helixdiff-export = "helixdiff.export:main"
helixdiff-gate = "helixdiff.gate:main"
helixdiff-proof-recipe = "helixdiff.recipe:main"
helixdiff-breakthrough-plan = "helixdiff.breakthrough:main"
helixdiff-verify-scratch = "helixdiff.verify_scratch:main"
helixdiff-selector-contract = "helixdiff.contract:main"
helixdiff-visible-reranker-oracle-smoke = "helixdiff.proofs.visible_reranker_oracle_smoke:main"
helixdiff-proxy-mask-selector-contract-smoke = "helixdiff.proofs.proxy_mask_selector_contract_smoke:main"
helixdiff-canvas-boundary-smoke = "helixdiff.proofs.canvas_boundary_smoke:main"
helixdiff-in-document-echo-oracle-smoke = "helixdiff.proofs.in_document_echo_oracle_smoke:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["helixdiff*"]
